--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   font-family: Arial, Helvetica, sans-serif; }
 
 .header {
-  background-color: pink;
+  background-color: #a9288f;
   height: 50px;
   display: flex;
   justify-content: space-between;
