--- a/scss/style.css
+++ b/scss/style.css
@@ -27,6 +27,6 @@ body {
   padding-right: 10px; }
 
 h1 {
-  color: #a9288f; }
+  background-color: #a9288f; }
 
 /*# sourceMappingURL=style.css.map */
