--- a/scss/style.css
+++ b/scss/style.css
@@ -27,6 +27,7 @@ body {
   padding-right: 10px; }
 
 h1 {
-  background-color: #a9288f; }
+  background-color: #a9288f;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
