--- a/scss/style.css
+++ b/scss/style.css
@@ -28,6 +28,7 @@ body {
 
 h1 {
   color: #a9288f;
-  text-align: center; }
+  text-align: center;
+  font-size: 100px; }
 
 /*# sourceMappingURL=style.css.map */
