--- a/scss/_heading.scss
+++ b/scss/_heading.scss
@@ -1,5 +1,10 @@
 h1{
     color: $primary;
     text-align: center;
-    font-size: 100px;
+    font-size: 1.9em;
+}
+h2{
+    color: $primary;
+    text-align: center;
+    font-size: 1.6em;
 }
