--- a/css/style-b.css
+++ b/css/style-b.css
@@ -29,6 +29,17 @@ body {
 h1 {
   color: #a9288f;
   text-align: center;
-  font-size: 60px; }
+  font-size: 1.9em; }
 
-/*# sourceMappingURL=style.css.map */
+h2 {
+  color: #a9288f;
+  text-align: center;
+  font-size: 1.6em; }
+
+.icon__user {
+  width: 30%;
+  color: #a9288f;
+  padding: 0.2em;
+  margin-left: 35%; }
+
+/*# sourceMappingURL=style-b.css.map */
