who we are page

--- a/scss/_blurb.scss
+++ b/scss/_blurb.scss
@@ -8,3 +8,9 @@
     padding: 0.5em;
     background-color: #FBF1EC;
 }
+.who-we-are {
+    margin: 1em;
+    padding: 0.8em;
+    background-color: #FBF1EC;
+   
+}
