--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ img {
   max-width: 100%; }
 
 body {
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: 'Roboto', sans-serif; }
 
 .header {
   background-color: #a9288f;
@@ -26,27 +26,30 @@ body {
   padding-top: 10px;
   padding-right: 10px; }
 
+.fa-bars {
+  color: white; }
+
 h1 {
   color: #a9288f;
   text-align: center;
-  font-size: 1.9em; }
+  font-size: 1.9em;
+  margin: 0.2em;
+  margin-top: 0.3em; }
 
 h2 {
   color: #a9288f;
   text-align: center;
-  font-size: 1.8em; }
+  font-size: 1.8em;
+  margin-top: 0.2em; }
 
 .icon__user, .icon__what-we-do, .icon__get-involved {
   color: #a9288f;
-  font-size: 120px;
+  font-size: 110px;
   margin: 1%;
   padding: 1%; }
 
 .icon-container {
   text-align: center; }
-
-.fa-bars {
-  color: white; }
 
 .blurb {
   padding: 0.1em;
@@ -56,5 +59,21 @@ h2 {
   margin: 0.8em;
   padding: 0.5em;
   background-color: #FBF1EC; }
+
+.who-we-are {
+  margin: 1em;
+  padding: 0.8em;
+  background-color: #FBF1EC; }
+
+footer {
+  background-color: #a9288f;
+  height: 80px; }
+
+.footer_social-media {
+  text-align: center; }
+
+.fa-facebook, .fa-twitter-square {
+  color: white;
+  font-size: 40px; }
 
 /*# sourceMappingURL=style.css.map */
