--- a/scss/_heading.scss
+++ b/scss/_heading.scss
@@ -2,9 +2,12 @@ h1{
     color: $primary;
     text-align: center;
     font-size: 1.9em;
+    margin: 0.2em;
+    margin-top: 0.3em;
 }
 h2{
     color: $primary;
     text-align: center;
     font-size: 1.8em;
+    margin-top: 0.2em;
 }
