--- a/scss/_blurb.scss
+++ b/scss/_blurb.scss
@@ -7,10 +7,19 @@
     margin: 0.8em;
     padding: 0.5em;
     background-color: #FBF1EC;
+    letter-spacing: 0.0625em;
 }
 .who-we-are {
     margin: 1em;
     padding: 0.8em;
     background-color: #FBF1EC;
+    letter-spacing: 0.0625em;
    
+}
+
+.blurb_what-we-do{
+    margin: 1em;
+    padding: 0.8em;
+    background-color: #FBF1EC;
+    letter-spacing: 0.0625em;
 }
