--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,8 +6,12 @@
 @import "typography";
 
 // Component styles
+@import "carousel";
+@import "container";
 @import "header";
 @import "heading";
 @import "icons";
+@import "image";
 @import "blurb";
 @import "footer";
+@import "slick";
