--- a/scss/_blurb.scss
+++ b/scss/_blurb.scss
@@ -1,25 +1,15 @@
-.blurb{
-    padding: 0.1em;
-    margin: 0.1em;
-    
-}
-.blurb-container {
-    margin: 0.8em;
-    padding: 0.5em;
-    background-color: #FBF1EC;
-    letter-spacing: 0.0625em;
-}
-.who-we-are {
-    margin: 1em;
-    padding: 0.8em;
-    background-color: #FBF1EC;
-    letter-spacing: 0.0625em;
-   
+.blurb {
+  padding: 0.8em;
+  background-color: #FBF1EC;
+  letter-spacing: 0.0625em;
+  margin-bottom: 0.8em;
 }
 
-.blurb_what-we-do{
-    margin: 1em;
-    padding: 0.8em;
-    background-color: #FBF1EC;
-    letter-spacing: 0.0625em;
+.blurb__paragraph {
+  margin-bottom: 1em;
+}
+
+.blurb__heading {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
 }
