--- a/scss/_heading.scss
+++ b/scss/_heading.scss
@@ -1,13 +1,15 @@
-h1{
-    color: $primary;
-    text-align: center;
-    font-size: 1.9em;
-    margin: 0.2em;
-    margin-top: 0.3em;
+h1 {
+  color: $primary;
+  text-align: center;
+  font-size: 1.9em;
+  margin: 0.2em;
+  margin-top: 0.3em;
 }
-h2{
-    color: $primary;
-    text-align: center;
-    font-size: 1.8em;
-    margin-top: 0.2em;
+
+h2 {
+  color: $primary;
+  text-align: center;
+  font-size: 1.8em;
+  margin-top: 0.2em;
+  margin-bottom: 0.5em;
 }
