--- a/scss/_blurb.scss
+++ b/scss/_blurb.scss
@@ -1,7 +1,6 @@
 .blurb {
   padding: 0.8em;
-  background-color: #FBF1EC;
-  letter-spacing: 0.0625em;
+  background-color: $secondary;
   margin-bottom: 0.8em;
 }
 
