--- a/scss/_heading.scss
+++ b/scss/_heading.scss
@@ -11,5 +11,10 @@ h2 {
   text-align: center;
   font-size: 1.8em;
   margin-top: 0.2em;
-  margin-bottom: 0.5em;
+
+}
+.maori {
+    color: FFc12E;
+    text-align: center;
+    font-style: italic;
 }
