--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,10 @@
 // Colors
 $primary: #a9288f;
-$secondary: #FBF1EC;;
+$secondary: #FBF1EC;
 
 // Breakpoints
 $tablet-breakpoint: 700px;
 $desktop-breakpoint: 1000px;
+
+// Layout
+$header-height: 50px;
