--- a/scss/_blurb.scss
+++ b/scss/_blurb.scss
@@ -1,10 +1,12 @@
 .blurb {
   padding: 0.8em;
   background-color: $secondary;
+  margin-top: 0.6em;
   margin-bottom: 0.8em;
 }
 
 .blurb__paragraph {
+  margin-top: 1em;
   margin-bottom: 1em;
 }
 
