--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -1,7 +1,6 @@
 .container {
+  @include auto-margin();
   display: block;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 10px;
   padding-right: 10px;
 
