--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,21 @@ img {
 body {
   font-family: 'Roboto', sans-serif; }
 
+.button {
+  background-color: #FFc12E;
+  border: none;
+  color: white;
+  padding: 10px;
+  min-width: 100px;
+  font-size: 20px;
+  border-radius: 3px;
+  text-align: center; }
+  .button:hover {
+    background-color: #ffb915; }
+
+.button--with-margin {
+  margin-bottom: 30px; }
+
 .infographics {
   margin-left: auto;
   margin-right: auto;
@@ -45,7 +60,8 @@ body {
 .header__menu {
   font-size: 20px;
   padding-top: 10px;
-  padding-right: 10px; }
+  padding-right: 10px;
+  cursor: pointer; }
 
 .fa-bars {
   color: white; }
@@ -64,7 +80,7 @@ h2 {
   margin-top: 0.2em; }
 
 .maori {
-  color: FFc12E;
+  color: #FFc12E;
   text-align: center;
   font-style: italic; }
 
@@ -128,6 +144,10 @@ h2 {
 .blurb__heading {
   margin-top: 1em;
   margin-bottom: 0.5em; }
+
+.blurb__button {
+  display: flex;
+  justify-content: center; }
 
 footer {
   background-color: #a9288f;
