--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,26 @@ footer {
   font-size: 40px;
   margin-right: 10px; }
 
+.form {
+  margin-top: 20px;
+  margin-bottom: 20px; }
+
+.form__input {
+  margin-bottom: 10px; }
+  .form__input label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px; }
+  .form__input input, .form__input textarea {
+    font-size: 16px;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    background-color: #FBF1EC; }
+  .form__input .input--checkbox {
+    width: auto;
+    margin-bottom: 10px; }
+
 .slider {
   width: 50%;
   margin: 100px auto; }
