--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  letter-spacing: 0.0625em;
+  // letter-spacing: 0.0009em;
 }
 
 img {
