--- a/scss/style.css
+++ b/scss/style.css
@@ -3,7 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  text-decoration: none; }
+  text-decoration: none;
+  letter-spacing: 999em; }
 
 img {
   max-width: 100%; }
